prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      tolerations:
        - key: "name-mb"
          #operator: "Exists"
          value: "monitoring"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: regcred
      containers:
        - name: prometheus
          image: swr.af-south-1.myhuaweicloud.com/motobill-prod/prometheus:latest
          args:
            - "--storage.tsdb.retention.time=12h"
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 200m
              memory: 400M
            limits:
              cpu: 200m
              memory: 400M
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: prometheus-storage-volume
          persistentVolumeClaim: 
            claimName: prometheus-pvc
